# maxivmac

./: .clang-format  .git-blame-ignore-revs  .gitignore  AGENTS.md  AUTHORS  CLIPBOARD_PLAN.md  CMakeLists.txt  CMakePresets.json  INIT_PLAN.md  README.md  SERIAL_PLAN.md  SHAREDDRIVE_DEBUG.md  build-debug.sh  build-init.sh  build-reference.sh  compare.sh  dbglog.txt  debug_ants.dbg  debug_ants_bitmap.dbg  debug_copy.dbg  debug_create.dbg  debug_duplicate.dbg  debug_finder.dbg  debug_lifecycle.dbg  debug_oom.dbg  doit-debug.sh  doit-reference.sh  run-debug.sh  run-reference.sh  selftest.sh
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
Contents/: Info.plist
Contents/MacOS/: minivmac
assets/: AUDIT.md  DETAILED_PLAN.md  PLAN.md  SHOW_FIELDS_PLAN.md  errors.def  globals.def  traps.def  typemap.def  types.def
cfg/: CNFUIALL.h
cmake/: CNFUDALL.h.in  CNFUDOSG.h.in  CNFUIOSG.h.in  STRCONST.h.in
cmake/models/: MacII_CNFUDPIC.h
data/debug/: traps.def  typemap.def  types.def
data/macs/: 1-II.mac  1.txt  2-Plus.mac  2.txt  3-II 701.mac  THINK C Build.mac  log.txt  log2.txt  log3.txt  macii 608.mac  macii-7.mac  plus-608.mac
docs/: BUGS.md  BUILDING.md  CLEANUP.md  CLEANUP_DEFINES.md  CODE_QUALITY.md  CYCLES.md  DEAD_CODE.md  DEAD_CODE_AUDIT.md  DEAD_CODE_DEVICES.md  DEAD_CODE_PLATFORM.md  DEBUG.md  DEFINES.md  DEFINES_PLAN.md  DEFINES_PLAN_PHASE3.md  DEFINES_PLAN_PHASE3_DETAIL.md  DEVREMOVE.md  DEVREMOVE_PLAN.md  EMULATOR_DEBUG_INSIGHTS.md  FIXES.md  FULL_PLAN.md  GLOBALS.md  GLOBALS_DISPLAY.md  GLOBAL_REMOVE.md  GLOSSARY.md  HFS_TRAPS.md  HFS_TRAPS_PLAN.md  INCLUDES.md  INCLUDES_PLAN.md  INIT_PLAN.md  INSIGHTS.md  ISSUES.md  LATER.md  LOG.md  MACHINE_TO_RIG_PLAN.md  MACOS_STUFF.md  MACROMAN_UNIFY_DESIGN.md  MANUAL_TEST.md  NAMING.md  NAMING_PLAN.md  PICT_CLIPBOARD_DESIGN.md  (+23 more)
docs/done/: MACHINE_TO_RIG_PLAN.md  PLAN-2.md  PLAN-3.md  UI.md  UI_PLAN.md
docs/features/: APPLEDOUBLE.md  APPLEDOUBLE_DESIGN.md  APPLEDOUBLE_PLAN.md  BRANDING.md  CICD.md  CLIPBOARD.md  CLUT.txt  DEBUGGER.md  DEBUGGER_BUGS.md  DEBUGGER_DESIGN.md  DEBUGGER_PLAN.md  DISPATCH_TRAPS.md  DISPATCH_TRAPS_DESIGN.md  DISPATCH_TRAPS_DETAILED_PLAN.md  EVENTS.md  EVENTS_PLAN.md  FEATURES.md  HOSTVOLUME.md  HOSTVOLUME_DESIGN.md  HOSTVOLUME_PLAN.md  ICON_TOOL.md  ICON_TOOL_DESIGN.md  ICON_TOOL_PLAN.md  INIT_VERSION.md  INIT_VERSION_PLAN.md  LOW_MEMORY_DESIGN.md  LOW_MEMORY_PLAN.md  MCP.md  MODEL.md  MODEL_DESIGN.md  MODEL_PLAN.md  NETWORKING.md  NETWORKING_PLAN.md  SCRIPTING.md  SCRIPTING_DESIGN.md  SCRIPTING_PLAN.md  SERIAL.md  SERIAL_PLAN.md  SHAREDDRIVE.md  SHAREDDRIVE_DEBUG.md  (+20 more)
docs/roadmap/: MEETING_1.md  ROADMAP.md  ROADMAP_PLAN.md
docs/specs/: MODEL_SELECTOR.md  MOUSE.md
extras/utils/: clipin-1.1.0.dsk  clipout-1.1.0.dsk  exportfl-1.3.1.dsk  importfl-1.2.2.dsk
macdocs/: EMULATOR_MAP.md  INDEX.md
macdocs/INITs/: mactech-5-10.html
macdocs/THINK_C_3/: AGENTS.md
macdocs/THINK_C_5/: ._Apple #includes  ._MacHeaders  ._THINK #includes  AGENTS.md  Mac #includes.c
macdocs/ref/: GLOBAL_VARS.md  HARDWARE.md  MACPLUSROM.md  TRAP_TABLE.md  plus-rom-listing.asm.txt
macdocs/tech_doc/: files.html  hin202.html  index.html  multifinder_guide.md  qa405.html  tn405.html
macsrc/: AGENTS.md  INIT.md  INIT_PLAN.md
macsrc/clipin/: ClipIn.c  Makefile
macsrc/clipout/: ClipOut.c  Makefile
macsrc/clipsync/: TODO.md  init.c  main.c
macsrc/exportfl/: APPLMAIN.i  MACENVRN.i  MYMACAPI.i  PROGRBAR.i  SAVEDERR.i  app.c
macsrc/importfl/: app.c
macsrc/init/: ._maxivmac INIT.π  INIT.md  clip.c  comm.c  defs.h  drive.c  init.c  pict.c  version.h.default
macsrc/shareddrive/: ._ClassicMacIcons  ._Desktop  ._MAC_BUILD.md  ._Shared Drive Maxi vMac  ._Shared Drive.π  ._TODO.md  ._done  ._icons  ._init.c  ._shared.dbg  ._shareddrive  ._thinkc-build.hfs  ._tmp  ._tracing.txt  FINDING.md  FIXES_PLAN.md  LOG_PLAN.md  MAC_BUILD.md  SHAREDRIVE.md  SHAREDRIVE_DESIGN.md  SHAREDRIVE_PLAN1.md  SHAREDRIVE_PLAN2.md  SHAREDRIVE_PLAN3.md  TODO.md  build.dbg  init-changed.c  init.c  shared.dbg  tracing.txt
macsrc/tests/: 608.hfs  README.md  macii-608.dbg.in  macii-701.dbg.in  plus-608.dbg.in  plus-701.dbg.in  smoke.sh
scripts/: coverage.sh  write_scc.py  write_via.py  write_via2.py
setup/: WRXCDFLS.i
shared/: README.txt  test.txt
src/: ACTVCODE.h  ADBEMDEV.c  ADBSHARE.h  ALTKEYSM.h  ASCEMDEV.c  ASCEMDEV.h  COMOSGLU.h  CONTROLM.h  DATE2SEC.h  DFCNFCMP.h  DISAM68K.c  DISAM68K.h  ENDIANAC.h  FPCPEMDV.h  FPMATHEM.h  GLOBGLUE.c  GLOBGLUE.h  HPMCHACK.h  INTLCHAR.h  IWMEMDEV.c  IWMEMDEV.h  KBRDEMDV.c  KBRDEMDV.h  LTOVRBPF.h  LTOVRUDP.h  M68KITAB.c  M68KITAB.h  MINEM68K.c  MINEM68K.h  MOUSEMDV.c  MOUSEMDV.h  OSGCOMUD.h  OSGCOMUI.h  OSGLUAAA.h  OSGLUCCO.m  OSGLUDOS.c  OSGLUGTK.c  OSGLUMAC.c  OSGLUNDS.c  OSGLUOSX.c  (+32 more)
src/config/: CNFUDALL.h  CNFUDOSG.h  CNFUDPIC.h  CNFUIALL.h  CNFUIOSG.h  CNFUIPIC.h  Info.plist  STRCONST.h  mac_file.cpp  mac_file.h
src/core/: abnormal_ids.h  common.h  config_loader.cpp  config_loader.h  defaults.h  diag.cpp  diag.h  emulation_config.h  emulator_config.h  endian.h  extfs_log.cpp  extfs_log.h  extn_clip.cpp  extn_clip.h  extn_clip_pict.cpp  extn_clip_pict.h  extn_extfs.cpp  extn_extfs.h  extn_system.cpp  extn_system.h  host_pasteboard.cpp  host_pasteboard.h  ict_scheduler.cpp  ict_scheduler.h  machine.cpp  machine.h  machine_config.cpp  machine_config.h  machine_obj.cpp  machine_obj.h  main.cpp  main.h  md5.h  model_defs.cpp  (+12 more)
test/: Classic.golden  Mac512Ke.golden  MacII.golden  MacIIx.golden  MacPlus.golden  MacSE.golden  README.md  dbglog.txt  debugger_smoke.sh  macii_disk.golden  plus_608.golden  record.sh  run_script_tests.sh  test_appledouble.cpp  test_clip_pict.cpp  test_debugger.cpp  test_drive_manager.cpp  test_event_queue.cpp  test_guest_dialog.cpp  test_host_volume.cpp  test_icon_extract.sh  test_mac_file.cpp  test_main.cpp  test_model_defs.cpp  test_resource_fork.cpp  test_slip.cpp  test_stb_image_impl.cpp  test_stubs.cpp  test_subtrap_break.dbg  test_subtrap_trace.dbg  test_tracing.cpp  test_types.cpp  test_ui.cpp  verify.sh
test-ithink/: scrum-framework.excalidraw
(+398 files in other folders)
